--- a/app/views/gear/_table.html.slim
+++ b/app/views/gear/_table.html.slim
@@ -1,12 +1,12 @@
-table.table.table-hover.table-sm.item-table.table-responsive.table-bordered
+table.table.table-hover.table-sm.item-table.table-responsive-md.table-bordered
   thead.thead-inverse
     tr
       th.p-1.text-center.align-middle[data-sort="string-ins" data-sort-onload="yes"] Item Name
-      th.p-1.text-center.align-middle Description
       th.p-1.text-center.align-middle[data-sort="int"] Price
       th.p-1.text-center.align-middle[data-sort="int"] Encumbrance
       th.p-1.text-center.align-middle[data-sort="int"] Rarity
       th.p-1.text-center.align-middle[data-sort="string-ins"] Type
       th.p-1.text-center.align-middle Roll
+      th.p-1.text-center.align-middle Sources
   tbody
     = render partial: 'gear/item_row', collection: gear, as: :item
