--- a/app/views/item_attachments/_item_row.html.slim
+++ b/app/views/item_attachments/_item_row.html.slim
@@ -1,17 +1,16 @@
 tr
   td.p-1.align-middle
     = item.fetch('name')
-    = item.fetch('is_restricted', false) ? '&nbsp;<span class="restricted-item">(R)</span>'.html_safe : nil
-  td.p-1.align-middle
-    = item.fetch('description')
-      br
-    - item.fetch('base_mods', []).each do |mod|
-      - next unless mod.dig('misc_desc')
-      p= format_description(mod.dig('misc_desc'))
+    = content_tag(:span, '(R)', class: 'restricted-item ml-1') if item.dig('is_restricted')
   td.p-1.align-middle.text-center[data-sort-value="#{item.fetch('price')}"]
     = number_with_delimiter item.fetch('price')
   td.p-1.align-middle
     - item.fetch('added_mods', []).each do |mod|
-      p= format_description(mod.fetch('misc_desc', ''))
+      p= format_description(mod.fetch('misc_desc'){ '' })
   td.p-1.align-middle
-    = roll_results(item.fetch('roll_total', [0,0,0]))
+    = roll_results(item.fetch('roll_total'){ [0,0,0] })
+  td.p-1.align-middle
+    - list_sources(item.fetch('description'), item.fetch('sources')).each do |source|
+      - abbr = content_tag(:abbr, source[:sourcebook].split(' ').map(&:first).join, title: source[:sourcebook])
+      - page = ":#{source[:page]}"
+      = content_tag(:p, safe_join([abbr, page]))
