--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -17,7 +17,7 @@
               .col-sm-8
                 = f.button :submit, 'Sign up', class: 'btn btn-primary btn-lg btn-block'
         .col-6.p-4
-          p Subscribe today for only $5 a month
+          / p Subscribe today for only $5 a month
           h4.card-title Features
           ul.feature-list
             li Save shops forever
