--- a/app/views/layouts/navigation/_navbar.html.slim
+++ b/app/views/layouts/navigation/_navbar.html.slim
@@ -17,7 +17,7 @@
           .nav-link.dropdown-toggle[href="#" data-toggle="dropdown"]
             = current_user.email
           .dropdown-menu
-            = link_to 'Subscription', subscriptions_path, class: 'dropdown-item'
+            / = link_to 'Subscription', subscriptions_path, class: 'dropdown-item'
             = link_to 'Edit Profile', edit_user_registration_path, class: 'dropdown-item'
             .dropdown-divider
             = link_to 'Logout', destroy_user_session_path, class: 'dropdown-item', method: :delete
