--- a/app/views/shops/missing_shop.html.slim
+++ b/app/views/shops/missing_shop.html.slim
@@ -2,7 +2,7 @@
 .container
   .jumbotron.text-center.box-shadow[style="margin-top: 50px"]
     p.h1.text-center
-    = image_tag('404.svg', class: 'img-fluids')
+    = image_tag('404.svg', class: 'img-fluid')
     p.lead.mt-5
       | Oh dear! This shop may have expired.
     a.btn.btn-lg.btn-primary[href="/shops/new" role="button"]
