--- a/app/views/shops/show.html.slim
+++ b/app/views/shops/show.html.slim
@@ -5,30 +5,30 @@
       .col-12.col-md-6
         dl.row
           dt.col-sm-3.col-5 Shop Type
-          dd.col-sm-9.col-7= shop_info.dig('shop_type')
+          dd.col-sm-9.col-7= shop.shop_type
           dt.col-sm-3.col-5 Shop Specialization
-          dd.col-sm-9.col-7= shop_info.dig('specialized_shop', 'name')
+          dd.col-sm-9.col-7= shop.specialized_shop.name
           dt.col-sm-3.col-5 Dice Pool
-          dd.col-sm-9.col-7= dice_display(shop_info.dig('dice_pool'))
+          dd.col-sm-9.col-7= dice_display(shop.dice_pool.dice_pool)
           dt.col-sm-3.col-5 Characteristic Level
-          dd.col-sm-9.col-7= shop_info.dig('characteristic_level')
+          dd.col-sm-9.col-7= shop.characteristic_level
           dt.col-sm-3.col-5 Skill Level
-          dd.col-sm-9.col-7= shop_info.dig('skill_level')
+          dd.col-sm-9.col-7= shop.skill_level
       .col-12.col-md-6
         dl.row
           dt.col-sm-3.col-5 World
           dd.col-sm-9.col-7
-              = shop_info.dig('world', 'name')
+              = shop.world.name
           dt.col-sm-3.col-5 Modifiers
           dd.col-sm-9.col-7
             ul.list-inline
               li.list-inline-item.m-0
               | Rarity: &nbsp;
-              span.badge.badge-secondary.p-2= shop_info.dig('world', 'rarity_modifier')
+              span.badge.badge-secondary.p-2= shop.world.rarity_modifier
               li.list-inline-item.mx-3 &mdash;
               li.list-inline-item
               | Price:&nbsp;
-              span.badge.badge-secondary.p-2= shop_info.dig('world', 'price_modifier')
+              span.badge.badge-secondary.p-2= shop.world.price_modifier
           - unless ttl == -1
             dt.col-sm-3.col-5 Time Left
             dd.col-sm-9.col-7= time_ago_in_words(Time.now + ttl.seconds).titleize
@@ -42,20 +42,20 @@
 
 ul.nav.nav-tabs#category-tabs role="tablist" 
   li.nav-item
-    a class=(shop['weapons'].count.positive? ? 'nav-link' : 'nav-link disabled') data-toggle="tab" href="#weapons" role="tab"  Weapons
+    a class=(shop.items['weapons'].count.positive? ? 'nav-link' : 'nav-link disabled') data-toggle="tab" href="#weapons" role="tab"  Weapons
   li.nav-item
-    a class=(shop['gear'].count.positive? ? 'nav-link' : 'nav-link disabled') data-toggle="tab" href="#gear" role="tab"  Gear
+    a class=(shop.items['gear'].count.positive? ? 'nav-link' : 'nav-link disabled') data-toggle="tab" href="#gear" role="tab"  Gear
   li.nav-item
-    a class=(shop['item_attachments'].count.positive? ? 'nav-link' : 'nav-link disabled') data-toggle="tab" href="#item-attachments" role="tab"  Item Attachments
+    a class=(shop.items['item_attachments'].count.positive? ? 'nav-link' : 'nav-link disabled') data-toggle="tab" href="#item-attachments" role="tab"  Item Attachments
   li.nav-item
-    a class=(shop['armor'].count.positive? ? 'nav-link' : 'nav-link disabled') data-toggle="tab" href="#armor" role="tab"  Armor
+    a class=(shop.items['armor'].count.positive? ? 'nav-link' : 'nav-link disabled') data-toggle="tab" href="#armor" role="tab"  Armor
 
 .tab-content
   #weapons.tab-pane.fade.show role="tabpanel"
-    = render partial: 'weapons/table', locals: { weapons: shop['weapons'] }
+    = render partial: 'weapons/table', locals: { weapons: shop.items['weapons'] }
   #gear.tab-pane.fade role="tabpanel"
-    = render partial: 'gear/table', locals: { gear: shop['gear'] }
+    = render partial: 'gear/table', locals: { gear: shop.items['gear'] }
   #item-attachments.tab-pane.fade role="tabpanel"
-    = render partial: 'item_attachments/table', locals: { item_attachments: shop['item_attachments'] }
+    = render partial: 'item_attachments/table', locals: { item_attachments: shop.items['item_attachments'] }
   #armor.tab-pane.fade role="tabpanel"
-    = render partial: 'armor/table', locals: { armor: shop['armor'] }
+    = render partial: 'armor/table', locals: { armor: shop.items['armor'] }
