--- a/app/views/gear/_item_row.html.slim
+++ b/app/views/gear/_item_row.html.slim
@@ -18,3 +18,12 @@ tr
       - abbr = content_tag(:abbr, source[:sourcebook].split(' ').map(&:first).join, title: source[:sourcebook])
       - page = ":#{source[:page]}"
       = content_tag(:p, safe_join([abbr, page]))
+  - if !is_free && current_user&.is_admin?
+    td.p-1.align-middle.text-center[data-id="#{item.fetch('key')}"]
+      div[data-quantity-value='']
+        = item.fetch('quantity')
+      - if shop.user.id == current_user&.id
+        div
+          button.btn.btn-primary[data-item-id="#{item.fetch('key')}" data-item_type="gear" data-item_key="#{item.fetch('key')}" data-decrease=''] -
+          button.btn.btn-primary[data-item-id="#{item.fetch('key')}" data-item_type="gear" data-item_key="#{item.fetch('key')}" data-increase=''] +
+
