Add changelog and enable quantities

--- a/app/views/armor/_table.html.slim
+++ b/app/views/armor/_table.html.slim
@@ -10,7 +10,7 @@ table.table.table-hover.table-sm.item-table.table-responsive-md.table-bordered
       th.p-1.text-center.align-middle[data-sort="int"] Rarity
       th.p-1.text-center.align-middle[width="10%"] Roll
       th.p-1.text-center.align-middle Sources
-      - if !is_free && current_user&.is_admin?
+      - if !is_free
         th.p-1.text-center.align-middle Qty
   tbody
     = render partial: 'armor/item_row', collection: armor, as: :item, locals: { shop: shop, is_free: is_free }
