--- a/app/views/static/index.html.slim
+++ b/app/views/static/index.html.slim
@@ -43,5 +43,5 @@
   .row
     .col-12.text-center
       p
-        | Looking for adventure inspiration? Visit 
-        a[href="http://www.swrpg-hooks.com"] SWRPG Hooks
+        | Check out the recent changes and upcoming features: 
+        a[href="/changelog"] The Changelog
