--- a/app/views/weapons/_table.html.slim
+++ b/app/views/weapons/_table.html.slim
@@ -14,7 +14,7 @@ table.table.table-hover.table-sm.item-table.table-responsive-md.table-bordered
       th.p-1.text-center.align-middle Qualities
       th.p-1.text-center.align-middle Roll
       th.p-1.text-center.align-middle Sources
-      - if !is_free && current_user&.is_admin?
+      - if !is_free
         th.p-1.text-center.align-middle Qty
 
   tbody
