--- a/app/views/item_attachments/_table.html.slim
+++ b/app/views/item_attachments/_table.html.slim
@@ -6,7 +6,7 @@ table.table.table-hover.table-sm.item-table.table-responsive-md.table-bordered
       th.p-1.text-center.align-middle Added Mods
       th.p-1.text-center.align-middle Roll
       th.p-1.text-center.align-middle Sources
-      - if !is_free && current_user&.is_admin?
+      - if !is_free
         th.p-1.text-center.align-middle Qty
   tbody
     = render partial: 'item_attachments/item_row', collection: item_attachments, as: :item, locals: { shop: shop, is_free: is_free }
