--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -23,9 +23,10 @@
             li Save shops forever
             li Create your own worlds with custom rarity/price modifiers
             li Regenerate saved shops
+            li Add quantities to items
           hr
           h5.card-title Planned Features
           ul.feature-list
             li Custom Shop Specializations
             li Choose items in your shop
-            li Mobile apps
+            li Create custom shops
