--- a/app/views/worlds/new.html.slim
+++ b/app/views/worlds/new.html.slim
@@ -1,7 +1,7 @@
 = content_for(:title) { 'Create World | SWRPG Shop Generator' }
 
 .d-flex.justify-content-center.h-100.align-content-center.mt-5
-  .card
+  .card.col-sm-12.col-md-12.col-lg-6.col-xl-6.p-0
     h4.card-header New World
     .card-body.p-0
       .row.no-gutters
