--- a/app/assets/stylesheets/shops.scss
+++ b/app/assets/stylesheets/shops.scss
@@ -2,6 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@keyframes increase {
+  0% { color: #373a3c; }
+  50% { color: #3FB618; }
+  100% { color: #373a3c; }
+}
+
+@keyframes decrease {
+  0% { color: #373a3c; }
+  50% { color: #FF0039; }
+  100% { color: #373a3c; }
+}
+
 .item-table {
   background-image: image_url('background.png')
 }
@@ -13,4 +25,12 @@
 .jumbotron.home {
   background: image-url("pattern.png");
   box-shadow: 0px 1px 2px 0px rgba(202, 202, 202, 0.59);
+}
+
+.increase {
+  animation: increase 1s;
+}
+
+.decrease {
+  animation: decrease 1s;
 }
