--- a/app/views/armor/_table.html.slim
+++ b/app/views/armor/_table.html.slim
@@ -13,4 +13,4 @@ table.table.table-hover.table-sm.item-table.table-responsive-md.table-bordered
       - if !is_free
         th.p-1.text-center.align-middle Qty
   tbody
-    = render partial: 'armor/item_row', collection: armor, as: :item, locals: { shop: shop, is_free: is_free }
+    = render partial: 'armor/item_row', collection: items, as: :item, locals: { shop: shop, is_free: is_free }
