--- a/app/views/shops/show.html.slim
+++ b/app/views/shops/show.html.slim
@@ -2,60 +2,14 @@
 .card.p-2
   .card-body.p-0
     .row
-      .col-12.col-md-6
-        dl.row
-          dt.col-sm-3.col-5 Shop Type
-          dd.col-sm-9.col-7= shop.shop_type
-          dt.col-sm-3.col-5 Shop Specialization
-          dd.col-sm-9.col-7= shop.specialized_shop.name
-          dt.col-sm-3.col-5 Dice Pool
-          dd.col-sm-9.col-7= dice_display(shop.dice_pool.dice_pool)
-          dt.col-sm-3.col-5 Characteristic Level
-          dd.col-sm-9.col-7= shop.characteristic_level
-          dt.col-sm-3.col-5 Skill Level
-          dd.col-sm-9.col-7= shop.skill_level
-      .col-12.col-md-6
-        dl.row
-          dt.col-sm-3.col-5 World
-          dd.col-sm-9.col-7
-              = shop.world.name
-          dt.col-sm-3.col-5 Modifiers
-          dd.col-sm-9.col-7
-            ul.list-inline
-              li.list-inline-item.m-0
-              | Rarity: &nbsp;
-              span.badge.badge-secondary.p-2= shop.world.rarity_modifier
-              li.list-inline-item.mx-3 &mdash;
-              li.list-inline-item
-              | Price:&nbsp;
-              span.badge.badge-secondary.p-2= shop.world.price_modifier
-          - unless ttl == -1
-            dt.col-sm-3.col-5 Time Left
-            dd.col-sm-9.col-7= time_ago_in_words(Time.now + ttl.seconds).titleize
-          dt.col-sm-3.col-5 Link
-          dd.col-sm-9.col-7
-            .input-group
-              = text_field_tag 'url', request.url, class: 'form-control form-control-sm col-sm-7', data: { slug: shop.slug }
-              span.input-group-btn
-                button.btn.btn-secondary.btn-clipboard[type="button" data-clipboard-target="#url" data-toggle="popover" data-placement="bottom" data-content="Copied!"]
-                  i.fa.fa-clipboard
+      = render partial: 'shop_info', locals: { shop: shop, ttl: ttl }
 
-ul.nav.nav-tabs#category-tabs role="tablist" 
-  li.nav-item
-    a class=(shop.items['weapons'].count.positive? ? 'nav-link' : 'nav-link disabled') data-toggle="tab" href="#weapons" role="tab"  Weapons
-  li.nav-item
-    a class=(shop.items['gear'].count.positive? ? 'nav-link' : 'nav-link disabled') data-toggle="tab" href="#gear" role="tab"  Gear
-  li.nav-item
-    a class=(shop.items['item_attachments'].count.positive? ? 'nav-link' : 'nav-link disabled') data-toggle="tab" href="#item-attachments" role="tab"  Item Attachments
-  li.nav-item
-    a class=(shop.items['armor'].count.positive? ? 'nav-link' : 'nav-link disabled') data-toggle="tab" href="#armor" role="tab"  Armor
+ul.nav.nav-tabs#category-tabs role="tablist"
+  - ['weapons', 'gear', 'item_attachments', 'armor'].each do |item_type|
+    li.nav-item
+      a class=(shop.items[item_type].count.positive? ? 'nav-link' : 'nav-link disabled') data-toggle="tab" href="##{item_type}" role="tab"  #{item_type.titleize}
 
 .tab-content
-  #weapons.tab-pane.fade.show role="tabpanel"
-    = render partial: 'weapons/table', locals: { weapons: shop.items['weapons'], shop: shop, is_free: ttl != -1 }
-  #gear.tab-pane.fade role="tabpanel"
-    = render partial: 'gear/table', locals: { gear: shop.items['gear'], shop: shop, is_free: ttl != -1 }
-  #item-attachments.tab-pane.fade role="tabpanel"
-    = render partial: 'item_attachments/table', locals: { item_attachments: shop.items['item_attachments'], shop: shop, is_free: ttl != -1 }
-  #armor.tab-pane.fade role="tabpanel"
-    = render partial: 'armor/table', locals: { armor: shop.items['armor'], shop: shop, is_free: ttl != -1 }
+  - ['weapons', 'gear', 'item_attachments', 'armor'].each do |item_type|
+    div.tab-pane.fade[id="#{item_type}" role="tabpanel"]
+      = render partial: "#{item_type}/table", locals: { items: shop.items[item_type], shop: shop, is_free: ttl != -1 }
