Mobile style refactoring

--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,5 +1,5 @@
 .d-flex.justify-content-center.h-100.align-content-center.mt-5
-  .card
+  .card.col-sm-12.col-md-8.col-lg-6.col-xl-3.p-0
     h4.card-header Edit #{resource_name.to_s.humanize}
     .card-body.p-0
       .row.no-gutters
