--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,9 +1,9 @@
 .d-flex.justify-content-center.h-100.align-content-center.mt-5
-  .card.w-75
+  .card.col-sm-12.col-lg-8.col-xl-8.p-0
     h4.card-header Sign up
     .card-body.p-0
       .row.no-gutters
-        .col-6.px-3.py-2
+        .col-xs-12.col-sm-12.col-md-6.px-3.py-2
           = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
             .form-group
               = f.error_notification
@@ -16,7 +16,7 @@
             .d-flex.justify-content-center
               .col-sm-8
                 = f.button :submit, 'Sign up', class: 'btn btn-primary btn-lg btn-block'
-        .col-6.p-4
+        .col-xs-12.col-sm-12.col-md-6.p-4
           / p Subscribe today for only $5 a month
           h4.card-title Features
           ul.feature-list
