--- a/app/views/shops/_shop.html.slim
+++ b/app/views/shops/_shop.html.slim
@@ -22,10 +22,10 @@
             li
             | Price:&nbsp;
             = shop.world.price_modifier
-    .card-footer.d-flex.justify-content-between
-      .col-4.text-center
-        = link_to fa_icon("refresh", text: 'Refresh'), shop_path(shop.id), method: :put, class: 'mx-2 btn btn-success btn-block'
-      .col-4.text-center
-        =link_to fa_icon('pencil', text: 'Edit'), edit_shop_path(shop.id), class: 'mx-2 btn btn-warning btn-block'
-      .col-4.text-center
-        = link_to fa_icon("times", text: 'Delete'), shop_path(shop), method: :delete, class: 'mx-2 btn btn-danger btn-block', data: { confirm: 'Are you sure?' }
+    .card-footer.d-flex.justify-content-around
+      / .col-4.col-xs-3.text-center
+      = link_to fa_icon("refresh", text: 'Refresh'), shop_path(shop.id), method: :put, class: 'mx-2 btn btn-success'
+      / .col-4.col-xs-3.text-center
+      =link_to fa_icon('pencil', text: 'Edit'), edit_shop_path(shop.id), class: 'mx-2 btn btn-warning'
+      / .col-4.col-xs-3.text-center
+      = link_to fa_icon("times", text: 'Delete'), shop_path(shop), method: :delete, class: 'mx-2 btn btn-danger', data: { confirm: 'Are you sure?' }
