--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
-<p><%= t(:welcome).capitalize + ' ' + @email %>!</p>
+<p>Welcome <%= @email %>!</p>
 
-<p><%= t '.confirm_link_msg' %> </p>
+<p>You can confirm your account email through the link below:</p>
 
-<p><%= link_to t('.confirm_account_link'), user_confirmation_url(confirmation_token: @token) %></p>
+<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
