--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,12 @@ $enable-shadows: true;
 @import "bootswatch/cosmo/bootswatch";
 @import "font-awesome";
 
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
 .card {
   box-shadow: 0px 1px 2px 0px rgba(202, 202, 202, 0.59)
 }
