--- a/app/views/static/changelog.html.slim
+++ b/app/views/static/changelog.html.slim
@@ -14,6 +14,7 @@
     
     h4 November
     ul
+      li GMs can create their own specialized shops now
       li Item Quantities Beta (Only on account created shops): A GM can increase/decrease an item quantity which will then update for all users viewing the shop. This could break randomly until a better implementation happens.
 
 
