--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -2,4 +2,4 @@ footer.footer.h-25.py-3.bg-light
   .container.d-flex.justify-content-between
     .col-6= link_to 'Changelog', '/changelog'
     
-    .col-6.text-right Enjoy the site and want to say thanks? <a href="https://www.buymeacoffee.com/celo" target="_blank">Buy me a coffee</a>
+    .col-6.text-right Enjoy the site and want to say thanks? <a href="https://www.buymeacoffee.com/celo" target="_blank"><img src="https://www.buymeacoffee.com/assets/img/custom_images/orange_img.png" alt="Buy Me A Coffee" style="height: auto !important;width: auto !important;" ></a>
