--- a/app/views/shops/_shop.html.slim
+++ b/app/views/shops/_shop.html.slim
@@ -24,7 +24,7 @@
             = shop.world.price_modifier
     .card-footer.d-flex.justify-content-around
       / .col-4.col-xs-3.text-center
-      = link_to fa_icon("refresh", text: 'Refresh'), shop_path(shop.id), method: :put, class: 'mx-2 btn btn-success'
+      = link_to fa_icon("refresh", text: 'Refresh'), shop_regenerate_path(shop.id), method: :put, class: 'mx-2 btn btn-success'
       / .col-4.col-xs-3.text-center
       =link_to fa_icon('pencil', text: 'Edit'), edit_shop_path(shop.id), class: 'mx-2 btn btn-warning'
       / .col-4.col-xs-3.text-center
