--- a/app/views/shops/new.html.slim
+++ b/app/views/shops/new.html.slim
@@ -78,6 +78,10 @@
           .col-sm-10
             = f.input :max_size, as: :integer, label: false, input_html: { class: 'form-control', min: 0, max: 10_000, value: 1_000 }
         .form-group.row
+          label.col-sm-2.col-form-label Markup Items?
+          .col-sm-10
+            = f.input :should_markup, label: false, input_html: { class: 'form-control' }
+        .form-group.row
           .col-12
             .card
               .card-header
