--- a/app/views/static/changelog.html.slim
+++ b/app/views/static/changelog.html.slim
@@ -11,10 +11,15 @@
     hr
 
     h3 Recent Changes
-    
+
+    h4 December
+    ul
+      li Added the original item price for GMs to see
+      li Added option to skip marking up items
+      li Fixed item markup. Was not randomly picking a value for the markup percentage of each item
+      li Fixed store size when regenerating the shop. Previously shop size values weren't being used
+
     h4 November
     ul
       li GMs can create their own specialized shops now
       li Item Quantities Beta (Only on account created shops): A GM can increase/decrease an item quantity which will then update for all users viewing the shop. This could break randomly until a better implementation happens.
-
-
