--- a/app/views/shops/_shop.html.slim
+++ b/app/views/shops/_shop.html.slim
@@ -23,9 +23,6 @@
             | Price:&nbsp;
             = shop.world.price_modifier
     .card-footer.d-flex.justify-content-around
-      / .col-4.col-xs-3.text-center
-      = link_to fa_icon("refresh", text: 'Refresh'), shop_regenerate_path(shop.id), method: :put, class: 'mx-2 btn btn-success'
-      / .col-4.col-xs-3.text-center
-      = link_to fa_icon('pencil', text: 'Edit'), edit_shop_path(shop.id), class: 'mx-2 btn btn-warning'
-      / .col-4.col-xs-3.text-center
+      = link_to fa_icon("refresh", text: 'Refresh'), shop_regenerate_path(shop.id), method: :put, class: 'mx-2 btn btn-success' unless shop.is_custom?
+      = link_to fa_icon('pencil', text: 'Edit'), edit_shop_path(shop.id), class: 'mx-2 btn btn-warning' unless shop.is_custom?
       = link_to fa_icon("times", text: 'Delete'), shop_path(shop), method: :delete, class: 'mx-2 btn btn-danger', data: { confirm: 'Are you sure?' }
