Shop Show Changes

--- a/app/views/armor/_item_row.html.slim
+++ b/app/views/armor/_item_row.html.slim
@@ -15,8 +15,9 @@ tr
     = item.fetch('hard_points')
   td.p-1.align-middle.text-center
     = item.fetch('rarity')
-  td.p-1.align-middle
-    = roll_results(item.fetch('roll_total'){ [0,0,0] })
+  - unless shop.is_custom?
+    td.p-1.align-middle
+      = roll_results(item.fetch('roll_total'){ [0,0,0] })
   td.p-1.align-middle
     - list_sources(item.fetch('description'), item.fetch('sources')).each do |source|
       - abbr = content_tag(:abbr, source[:sourcebook].split(' ').map(&:first).join, title: source[:sourcebook])
