--- a/app/views/armor/_table.html.slim
+++ b/app/views/armor/_table.html.slim
@@ -8,7 +8,8 @@ table.table.table-hover.table-sm.item-table.table-responsive-md.table-bordered
       th.p-1.text-center.align-middle[data-sort="int"] Encumbrance
       th.p-1.text-center.align-middle[data-sort="int"] Hard Points
       th.p-1.text-center.align-middle[data-sort="int"] Rarity
-      th.p-1.text-center.align-middle[width="10%"] Roll
+      - unless shop.is_custom?
+        th.p-1.text-center.align-middle[width="10%"] Roll
       th.p-1.text-center.align-middle Sources
       - if !is_free
         th.p-1.text-center.align-middle Qty
