--- a/app/views/gear/_table.html.slim
+++ b/app/views/gear/_table.html.slim
@@ -6,7 +6,8 @@ table.table.table-hover.table-sm.item-table.table-responsive-md.table-bordered
       th.p-1.text-center.align-middle[data-sort="int"] Encumbrance
       th.p-1.text-center.align-middle[data-sort="int"] Rarity
       th.p-1.text-center.align-middle[data-sort="string-ins"] Type
-      th.p-1.text-center.align-middle Roll
+      - unless shop.is_custom?
+        th.p-1.text-center.align-middle Roll
       th.p-1.text-center.align-middle Sources
       - if !is_free
         th.p-1.text-center.align-middle Qty
