--- a/app/views/gear/_item_row.html.slim
+++ b/app/views/gear/_item_row.html.slim
@@ -11,8 +11,9 @@ tr
     = item.fetch('rarity')
   td.p-1.align-middle
     = item.fetch('gear_type', item.dig('type'))
-  td.p-1.align-middle
-    = roll_results(item.fetch('roll_total') { [0,0,0] })
+  - unless shop.is_custom?
+    td.p-1.align-middle
+      = roll_results(item.fetch('roll_total') { [0,0,0] })
   td.p-1.align-middle
     - list_sources(item.fetch('description'), item.fetch('sources')).each do |source|
       - abbr = content_tag(:abbr, source[:sourcebook].split(' ').map(&:first).join, title: source[:sourcebook])
