--- a/app/views/item_attachments/_item_row.html.slim
+++ b/app/views/item_attachments/_item_row.html.slim
@@ -8,8 +8,9 @@ tr
   td.p-1.align-middle
     - item.fetch('added_mods', []).each do |mod|
       p= format_description(mod.fetch('misc_desc'){ '' })
-  td.p-1.align-middle
-    = roll_results(item.fetch('roll_total'){ [0,0,0] })
+  - unless shop.is_custom?
+    td.p-1.align-middle
+      = roll_results(item.fetch('roll_total'){ [0,0,0] })
   td.p-1.align-middle
     - list_sources(item.fetch('description'), item.fetch('sources')).each do |source|
       - abbr = content_tag(:abbr, source[:sourcebook].split(' ').map(&:first).join, title: source[:sourcebook])
