--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,3 +75,12 @@ ul.feature-list {
   @extend small;
   @extend .text-muted;
 }
+
+.fade-in {
+  animation: fadein 0.3s ease-in;
+}
+
+@keyframes fadein {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
