--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,4 +1,4 @@
-footer.footer.h-25.py-3.bg-light
+footer.footer.py-3.bg-light[style="height: 60px"]
   .container.d-flex.justify-content-between
     .col-6= link_to 'Changelog', '/changelog'
     
