--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,10 +15,10 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application'
-  body[class="#{controller_name} #{action_name}" data-turbolinks="#{content_for?(:body_attributes) ? yield(:body_attributes) : 'true'}"]
+  body[class="d-flex flex-column #{controller_name} #{action_name}" data-turbolinks="#{content_for?(:body_attributes) ? yield(:body_attributes) : 'true'}"]
     = render 'layouts/analytics' if Rails.env.production?
     = render 'layouts/navigation/navbar'
     = render 'layouts/messages'
-    main.flex-fill
+    main.container-fluid.flex-grow-1
       = yield
     = render 'layouts/footer'
