--- a/app/views/specialized_shops/new.html.slim
+++ b/app/views/specialized_shops/new.html.slim
@@ -1,8 +1,8 @@
-= content_for(:title) { 'Create Specialized Shop | SWRPG Shop Generator' }
+= content_for(:title) { 'Create Shop Specialization | SWRPG Shop Generator' }
 
 .d-flex.justify-content-center.h-100.align-content-center.mt-5
   .card.col-sm-12.col-md-12.col-lg-6.col-xl-6.p-0
-    h4.card-header New Specialized Shop
+    h4.card-header New Shop Specialization
     .card-body.p-0
       .row.no-gutters
         .col-md-12.px-3.py-2
