--- a/app/views/custom_shops/edit.html.slim
+++ b/app/views/custom_shops/edit.html.slim
@@ -1,3 +1,3 @@
 = content_for(:title) { 'Edit Custom Shop | SWRPG Shop Generator' }
 = content_for(:body_attributes) { 'false' }
-= react_component("CustomShop", items: @items, currentItems: @current_items, shopInfo: @shop_info)
+= react_component("CustomShop", items: @items, currentItems: @current_items, shopInfo: @shop_info, isEditMode: true)
