--- a/app/views/static/changelog.html.slim
+++ b/app/views/static/changelog.html.slim
@@ -6,20 +6,25 @@
     ul
       li Manually add additional items to an auto generated shop
       li Ability to create Item Packs. Colelction of items a GM can bulk add to a shop
-      li Manually generate an entire custom shop. Items, prices, quantities
 
     hr
 
     h3 Recent Changes
 
-    h4 December
+    h4 February
+    ul
+      li
+        =link_to 'Custom Shops', new_custom_shop_path
+        |  - Select any items and set the prices for your shop instead of relying on dice rolls
+
+    h4 December 2018
     ul
       li Added the original item price for GMs to see
       li Added option to skip marking up items
       li Fixed item markup. Was not randomly picking a value for the markup percentage of each item
       li Fixed store size when regenerating the shop. Previously shop size values weren't being used
 
-    h4 November
+    h4 November 2018
     ul
       li GMs can create their own specialized shops now
       li Item Quantities Beta (Only on account created shops): A GM can increase/decrease an item quantity which will then update for all users viewing the shop. This could break randomly until a better implementation happens.
